--- a/wolfe-invoice-vercel/index.html
+++ b/wolfe-invoice-vercel/index.html
@@ -284,17 +284,23 @@
 
   /* ── Print ── */
   @media print {
-    @page { margin: 15mm; }
+    @page { size: A4; margin: 12mm; }
     body { background: #fff !important; padding: 0 !important; display: block !important; }
     h1, .form-card, .inv-actions { display: none !important; }
-    #invoice-preview { display: block !important; margin: 0 !important; width: 100% !important; max-width: 100% !important; }
-    .invoice-sheet { padding: 0 !important; box-shadow: none !important; font-size: 12px !important; }
-    /* Force desktop layout when printing from mobile */
+    #invoice-preview { display: block !important; margin: 0 !important; width: 100% !important; max-width: 100% !important; overflow: visible !important; }
+    .invoice-sheet {
+      padding: 0 !important;
+      box-shadow: none !important;
+      font-size: 12px !important;
+      width: 100% !important;
+      min-width: 0 !important;
+      box-sizing: border-box !important;
+    }
     .inv-meta { display: flex !important; flex-direction: row !important; justify-content: space-between !important; margin-bottom: 32px !important; }
     .inv-meta > div:last-child { text-align: right !important; }
     .inv-header { display: flex !important; flex-direction: row !important; margin-bottom: 40px !important; }
-    .inv-logo img { height: 126px !important; }
-    .inv-title { font-size: 44px !important; }
+    .inv-logo img { height: 100px !important; }
+    .inv-title { font-size: 40px !important; }
     .inv-issued-by { margin-bottom: 28px !important; }
     .inv-table thead th { font-size: 10px !important; }
     .inv-table tbody td { font-size: 12px !important; }
@@ -653,7 +659,8 @@ Account Number: 10563304</textarea>
     var css = [
       "*{box-sizing:border-box;margin:0;padding:0;}",
       "@page{margin:15mm;}",
-      "body{background:#fff;font-family:Helvetica Neue,Arial,sans-serif;font-size:12px;line-height:1.5;color:#111;}",
+      "body{background:#fff;font-family:Helvetica Neue,Arial,sans-serif;font-size:12px;line-height:1.5;color:#111;margin:0;padding:0;width:100%;}",
+      ".invoice-sheet{width:100%;box-sizing:border-box;}",
       ".inv-header{display:flex!important;flex-direction:row!important;justify-content:space-between;align-items:flex-start;margin-bottom:40px;}",
       ".inv-title{font-size:44px;font-weight:900;letter-spacing:0.04em;color:#111;line-height:1;}",
       ".inv-logo img{height:126px;width:auto;display:block;}",
